--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,23 +1,119 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Arrow from "../components/Arrow.astro";
+import Figure from "../components/Figure.astro";
 import { questions as questionsStore } from "../store/questions";
 import { getQuizzes } from "../services/quizAPI";
 import AnimatedBackground from '../components/AnimatedBackground.astro';
 
 // Get questions
-const questions = await getQuizzes();
+let questions = await getQuizzes();
 let firstId
-if (questions && questions.length > 0) {
-  firstId = questions[0].id;
-  questionsStore.set(questions);
+if (!questions || questions.length === 0) {
+	questions = [
+	{
+		id: 7368,
+		question: "Which command redirects only the standard error to a file?",
+		description: "Understanding how to capture error messages separately.",
+		answers: {
+		answer_a: "command 2> error.log",
+		answer_b: "command > error.log",
+		answer_c: "command 1> error.log",
+		answer_d: "command >> error.log",
+		},
+		multiple_correct_answers: "false",
+		correct_answers: {
+		answer_a_correct: "true",
+		answer_b_correct: "false",
+		answer_c_correct: "false",
+		answer_d_correct: "false",
+		answer_e_correct: "false",
+		answer_f_correct: "false",
+		},
+		correct_answer: null,
+		explanation: "Using `2>` redirects standard error output to a file.",
+		tip: null,
+		tags: [
+		{
+			name: "BASH",
+		},
+		],
+		category: "Docker",
+		difficulty: "Easy",
+	},
+	{
+		id: 7369,
+		question: "What does the Docker command 'docker ps' do?",
+		description: "Understanding basic Docker commands.",
+		answers: {
+		answer_a: "Lists all running containers",
+		answer_b: "Lists all containers (running and stopped)",
+		answer_c: "Lists all Docker images",
+		answer_d: "Stops all running containers",
+		},
+		multiple_correct_answers: "false",
+		correct_answers: {
+		answer_a_correct: "true",
+		answer_b_correct: "false",
+		answer_c_correct: "false",
+		answer_d_correct: "false",
+		answer_e_correct: "false",
+		answer_f_correct: "false",
+		},
+		correct_answer: null,
+		explanation: "The 'docker ps' command lists all currently running containers.",
+		tip: "Use 'docker ps -a' to see all containers including stopped ones.",
+		tags: [
+		{
+			name: "Docker",
+		},
+		],
+		category: "Docker",
+		difficulty: "Medium",
+	},
+	{
+		id: 7370,
+		question: "Which SQL statement is used to extract data from a database?",
+		description: "Understanding basic SQL commands.",
+		answers: {
+		answer_a: "SELECT",
+		answer_b: "EXTRACT",
+		answer_c: "GET",
+		answer_d: "OPEN",
+		},
+		multiple_correct_answers: "false",
+		correct_answers: {
+		answer_a_correct: "true",
+		answer_b_correct: "false",
+		answer_c_correct: "false",
+		answer_d_correct: "false",
+		answer_e_correct: "false",
+		answer_f_correct: "false",
+		},
+		correct_answer: null,
+		explanation: "The SELECT statement is used to select data from a database.",
+		tip: null,
+		tags: [
+		{
+			name: "SQL",
+		},
+		{
+			name: "Database",
+		},
+		],
+		category: "SQL",
+		difficulty: "Hard",
+	},
+	]
 }
+firstId = questions[0].id;
+questionsStore.set(questions);
 ---
 
 <Layout title="Welcome to Quizzler">
 	<AnimatedBackground mainColor="4242e0" figureColor='EBEFF2'/>
 	<main class="min-w-screen min-h-screen w-full">
-		<div id="figure" class="fixed -top-[73%] -left-[27%] -z-10" transition:name="figure"></div>
+		<Figure/>
 		<section id="hero" class="absolute left-2/5 top-4/12" transition:name="hero">
 			<h1 class="text-center">Quizzler</h1>
 			<div id="By" class="flex flex-row gap-[1vw] justify-end">
@@ -39,16 +135,6 @@ if (questions && questions.length > 0) {
 
 	
 <style>
-	#figure{
-		background-color: #EBEFF2;
-		-webkit-mask: url("/2D Figure.svg") no-repeat center;
-		mask: url("/2D Figure.svg") no-repeat center;
-		aspect-ratio: 1/1;
-		mask-size: contain;
-        width: 100%;
-        min-width: 130vw;
-		transform: rotate(155.32deg);
-	}
 
 	h1{
 		font-weight: 400;
